# lattice_app

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: api.py  logging.py  request_context.py
backend/app/core/config/: settings.py
backend/app/core/middleware/: audit.py  errors.py
backend/app/core/rbac/: permissions.py  roles.py
backend/app/core/security/: dependencies.py  jwks.py  jwt.py
backend/app/modules/admin/: router.py
backend/app/modules/health/: router.py
backend/app/modules/me/: router.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/admin-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/admin-ui/src/: App.tsx  index.css  main.tsx
frontend/admin-ui/src/auth/: AuthContext.tsx  AuthProvider.tsx  keycloak.ts  tokenRefresh.ts
frontend/admin-ui/src/components/dashboard/: VisitorsChart.tsx
frontend/admin-ui/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/admin-ui/src/components/ui/: chart.tsx
frontend/admin-ui/src/layouts/: AdminLayout.tsx
frontend/admin-ui/src/pages/: Admin.tsx  Dashboard.tsx  Home.tsx
frontend/admin-ui/src/routes/: ProtectedRoute.tsx
frontend/src/: main.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
infra/: docker-compose.yml
infra/keycloak/: realm-dev.json
